# sales-agent-v3

./: .gitignore  README.md  docker-compose.yml  package.json
.claude/hooks/: pre-tool-use.sh
admin/: package.json
admin/src/: index.html  main.js  preload.js  renderer.js
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sales/analyzer/: AudioCaptureService.kt  AudioStreamer.kt  CallService.kt  MainActivity.kt  PostCallActivity.kt  SalesApp.kt  SalesConnectionService.kt
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/xml/: network_security_config.xml
backend/: .env.example  Dockerfile  db.js  init.sql  license.js  main.py  package-lock.json  package.json  redis.js  requirements.txt  server.js
desktop/: .gitignore  package-lock.json  package.json
desktop/src/: bridge.js  index.html  main.js  preload.js  renderer.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
global-backend/: .env.example  Dockerfile  licenses.js  main.py  package.json  requirements.txt  server.js
website/backend/: .env.example  Dockerfile  main.py  requirements.txt
website/frontend/: index.html  package.json  vite.config.js
website/frontend/src/: App.jsx  index.css
website/frontend/src/pages/: Admin.jsx  Dashboard.jsx  Home.jsx  Login.jsx
