[package]
name    = "sales-desktop"
version = "3.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util   = "0.3"
